--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Simple Liker</title>
   </head>
   <body>
+  
     <div id="modal">
-      <h2>Error!</h2>
+      <!--added hidden class -->
+      <h2 class="hidden">Error!</h2>
       <p id="modal-message"></p>
     </div>
 
@@ -23,7 +25,7 @@
       <p>Practice your JavaScript!</p>
       <footer>
         <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+          <li class="like">Like!<span class="like-glyph">&#x2661;</span></li>
         </ul>
       </footer>
     </article>
